feat(server): update getting server by id endpoint (MVP-6)